@@ -16,56 +16,7 @@
         <version>1.7.0-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <!-- Die parameter 'checkstyle.config' und 'checkstyle.suppressions.config' müssen über die settings.xml
-            gesetzt werden, da sie von der Umgebung abhängig sind. -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.compile.version>1.8</java.compile.version>
-        <enforced.jdk.version>[1.8,1.9)</enforced.jdk.version>
-        <enforced.maven.version>[3.1.1,4)</enforced.maven.version>
-        <!-- Command-Line Argumente für VM, die die Tests per Surefire-Plugin ausführt. Zumindest file.encoding
-            sollte immer gesetzt sein. -->
-        <maven.surefire.argline>-Xmx1g -XX:MaxPermSize=256m -Dfile.encoding=${project.build.sourceEncoding}</maven.surefire.argline>
-
-        <!-- Versionen v. Plugins, die an mehreren Stellen genutzt werden -->
-        <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
-        <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
-    </properties>
-
-
     <profiles>
-        <!-- Profil um Snapshot-Versionen in Release-Tags zu verhindern -->
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>${maven.enforcer.plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>enforce-no-snapshots</id>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <requireReleaseDeps>
-                                            <message>No SNAPSHOTs allowed!</message>
-                                        </requireReleaseDeps>
-                                        <requireReleaseVersion>
-                                            <message>No SNAPSHOTs allowed!</message>
-                                        </requireReleaseVersion>
-                                    </rules>
-                                    <fail>true</fail>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>copyReleaseConfiguration</id>
             <activation>
@@ -103,53 +54,9 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <!-- Verschiebt, wenn vorhanden, die Lizenzdateien in APIDocs -->
-            <id>copyLicenseFiles</id>
-            <activation>
-                <file>
-                    <exists>license</exists>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <executions>
-                            <execution>
-                                <id>license-to-apidoc</id>
-                                <phase>generate-sources</phase>
-                                <configuration>
-                                    <target>
-                                        <copy todir="${project.build.directory}/apidocs">
-                                            <fileset dir="${basedir}/license" includes="*"/>
-                                        </copy>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <!-- Füge die Lizenzdateien dem JAR hinzu -->
-                <directory>license</directory>
-            </resource>
-        </resources>
-
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -206,205 +113,6 @@
         </pluginManagement>
 
         <plugins>
-            <!-- Erlaube den Build nur mit richtiger Java & Maven Version -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven.enforcer.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireJavaVersion>
-                                    <version>${enforced.jdk.version}</version>
-                                </requireJavaVersion>
-                                <requireMavenVersion>
-                                    <version>${enforced.maven.version}</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-banned-dependencies</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <bannedDependencies>
-                                    <excludes>
-                                        <exclude>de.bund.bva.pliscommon:plis-aufrufkontext</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-batchrahmen</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-behoerdenverzeichnis-client</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-benutzerverzeichnis-client</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-bildformate</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-binaerdatenservice-client</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-exception-core</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-exception-sst</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-fingerabdruck</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-jmsutil</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-konfiguration</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-logging</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-mailgw</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-mapping</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-nummernkreis</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-persistence</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-polling</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-protokollierung</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-regelwerk</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-schluesselverzeichnis-client</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-schreiben</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-serviceapi-core</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-serviceapi-sst</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-sgw-util</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-sicherheit</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-sicherheit-cams</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-sonderzeichen</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-sonderzeichen-rp</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-style</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-test</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-timestampprotocol</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-tomcat</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-ueberwachung</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-util</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-validation</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-web</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-web-rp</exclude>
-                                        <exclude>de.bund.bva.pliscommon:plis-webgui</exclude>
-                                        <exclude>log4j:log4j</exclude>
-                                    </excludes>
-                                    <message>Verbotene Abhängigkeiten gefunden, für die bspw. neuere
-                                        isy-Entsprechungen (isy-base) existieren. Bitte dependency:tree prüfen
-                                        und entsprechend excluden.</message>
-                                </bannedDependencies>
-                            </rules>
-                            <fail>true</fail>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.1</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>${java.compile.version}</source>
-                    <target>${java.compile.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <charset>${project.build.sourceEncoding}</charset>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <!-- VM-Argumente für bspw. mehr Speicher bei grossen Testläufen -->
-                    <argLine>${maven.surefire.argline}</argLine>
-                    <systemPropertyVariables>
-                        <user.language>de</user.language>
-                        <user.country>DE</user.country>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.3</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.10</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>3.0.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>javancss-maven-plugin</artifactId>
-                <version>2.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.5.1</version>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
@@ -443,58 +151,5 @@
             </plugin>
        </plugins>
     </build>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
-            </plugin>
-            <!-- Erzeugt einen Checkstyle-Bericht -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <configLocation>${checkstyle.config}</configLocation>
-                    <suppressionsLocation>${checkstyle.suppressions.config}</suppressionsLocation>
-                </configuration>
-            </plugin>
-            <!-- Erzeugt JavaDoc beim Build. Die Angabe des Encodings sorgt für eine korrekte Darstellung
-                von Sonderzeichen in den JavaDocs. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <charset>${project.build.sourceEncoding}</charset>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-            </plugin>
-            <!-- Das JXR-Plugin ermöglicht die Verlinkung von Source-Code in diversen Maven-Reports. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-            <!-- berichte über eingesetzte Bug Patterns. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.6</version>
-                <configuration>
-                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-                    <targetJdk>${java.compile.version}</targetJdk>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.4</version>
-            </plugin>
-        </plugins>
-    </reporting>
 
 </project>
